givefood/static/css/admin.css
@font-face {
  font-family:'Soehne Buch';
  src:url('/static/fonts/soehne-buch.woff2') format('woff2');
  font-weight:400;
}
@font-face {
  font-family:'Soehne Dreiviertelfett';
  src:url('/static/fonts/soehne-dreiviertelfett.woff2') format('woff2');
  font-weight:700;
}
.logo {
  height:35px;
  margin:5px 10px 5px 0;
  max-height:unset !important;
}
.navbar-item.has-dropdown .navbar-link {
  padding-bottom:0;
}
.navbar-dropdown {
  border-top:0;
}
.main {
  padding:0 10px;
  margin:15px 0;
}
.message-header {
  display:none;
}
th {
  text-align:left;
}
dt {
  float:left;
  width:200px;
}
dd {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
h2 {
  margin-top:20px;
}
h2:first-of-type {
  margin-top:0;
}
h3 {
  font-size:1em;
  margin-top:15px;
}
input[type=checkbox] {
  height:18px;
  width:18px;
  margin:10px 0;
}
.tabs {
  margin-bottom:20px !important;
}
.tabs .tag {
  height:1.6em;
  padding:0 4px;
}
#fbmap {
  width:1500px;
  height:1500px;
}
.twitter-feed {
  max-width:425px;
}
.small-product-image {
  width:50px;
  min-width:50px;
}
h1 {
  margin:10px 0;
  padding:0;
  font-size:1.5em;
}
input[type='date'] {
  width:160px;
}
.foodbank-sort {
  font-size:0.8em;
}
.extra-form-button {
  margin-top:10px;
}
table {
  contain:strict; 
}
th {
  position:sticky;
  top:0;
  background:#fff !important;
}
.box p {
  margin:0;
}
.locationtable tr:last-child {
  border:0;
}
.locationtable td {
  padding:5px 5px 5px 0;
}
.articles li {
  margin-bottom:10px;
}
table td.delivery-provider-icon {
  padding:.5em 0;
}
td.delivery-provider-icon img {
  width:12px;
}
.companyicon {
  width:16px;
  height:16px;
  vertical-align:middle;
}
.preview-frame {
  width:100%;
  border:0;
  height:1000px;
  position:sticky;
  top:0;
}
.settings {
  font-size:1.1em;
}
.settings li {
  margin-bottom:5px;
}
.newwindow img {
  margin-right:2px;
  width:16px;
  height:16px;
  vertical-align:middle;
}
.checktable li {
  margin-bottom:10px;
}
.footer {
  margin-top:3rem;
}

